--- a/docs/style.css
+++ b/docs/style.css
@@ -4,7 +4,6 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden; /* 防止页面横向滑动 */
 }
 
 /* 标题栏 */
@@ -29,7 +28,7 @@ header .current-date {
 .banner {
     position: relative;
     width: 100%;
-    height: 200px; /* 更适合的高度 */
+    height: 250px; /* 更合适的高度 */
 }
 
 .banner .carousel img {
@@ -40,7 +39,7 @@ header .current-date {
 
 .carousel-indicators {
     position: absolute;
-    bottom: 10px;
+    top: 10px; /* 改为在Banner图片上方 */
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -145,15 +144,6 @@ header .current-date {
 .popup .popup-content img {
     width: 100%;
     height: auto;
-}
-
-/* 广告位 */
-.ad-space {
-    height: 100px;
-    background-color: #f1f1f1;
-    text-align: center;
-    line-height: 100px;
-    font-size: 18px;
 }
 
 /* 底部备案信息 */
